Rename teams to namespaces, add created_by/modified_by
- Rename modified_at to last_modified_at
- Add created_by, last_modified_by to records
