# openapi/src/main.yaml
@@ -48,17 +48,19 @@ paths:
   /admin/environment/{name}: { $ref: 'admin/environment.yaml#/paths/manage' }
   /admin/group: { $ref: 'admin/group.yaml#/paths/create' }
   /admin/group/{name}: { $ref: 'admin/group.yaml#/paths/manage' }
+  /admin/namespace: { $ref: 'admin/namespace.yaml#/paths/create' }
+  /admin/namespace/{namespace}: { $ref: 'admin/namespace.yaml#/paths/manage' }
   /admin/orchestration_system:
     { $ref: 'admin/orchestration_system.yaml#/paths/create' }
   /admin/orchestration_system/{name}:
     { $ref: 'admin/orchestration_system.yaml#/paths/manage' }
   /admin/project_fact_type:
     { $ref: 'admin/project_fact_type.yaml#/paths/create' }
-  /admin/project_fact_type/{name}:
+  /admin/project_fact_type/{project_type}/{fact_type}:
     { $ref: 'admin/project_fact_type.yaml#/paths/manage' }
-  /admin/project_fact_type_option/{fact_type_id}:
+  /admin/project_fact_type_option:
     { $ref: 'admin/project_fact_type_option.yaml#/paths/create' }
-  /admin/project_fact_type_option/{fact_type_id}/{option_id}:
+  /admin/project_fact_type_option/{project_type}/{fact_type}/{value}:
     { $ref: 'admin/project_fact_type_option.yaml#/paths/manage' }
   /admin/project_link_type:
     { $ref: 'admin/project_link_type.yaml#/paths/create' }
@@ -66,8 +68,6 @@ paths:
     { $ref: 'admin/project_link_type.yaml#/paths/manage' }
   /admin/project_type: { $ref: 'admin/project_type.yaml#/paths/create' }
   /admin/project_type/{name}: { $ref: 'admin/project_type.yaml#/paths/manage' }
-  /admin/team: { $ref: 'admin/team.yaml#/paths/create' }
-  /admin/team/{name}: { $ref: 'admin/team.yaml#/paths/manage' }
 
   /projects: { '$ref': 'project/projects.yaml#/paths/collection' }
   /project/: { '$ref': 'project/project.yaml#/paths/create' }
@@ -92,6 +92,7 @@ paths:
   /settings/environments:
     { $ref: 'settings/environments.yaml#/paths/collection' }
   /settings/groups: { $ref: 'settings/groups.yaml#/paths/collection' }
+  /settings/namespaces: { $ref: 'settings/namespaces.yaml#/paths/collection' }
   /settings/orchestration_systems:
     { $ref: 'settings/orchestration_systems.yaml#/paths/collection' }
   /settings/permissions: { $ref: 'settings/permissions.yaml#/paths/collection' }
@@ -103,7 +104,6 @@ paths:
     { $ref: 'settings/project_link_types.yaml#/paths/collection' }
   /settings/project_types:
     { $ref: 'settings/project_types.yaml#/paths/collection' }
-  /settings/teams: { $ref: 'settings/teams.yaml#/paths/collection' }
 
   /status: { $ref: 'status.yaml#/paths/status' }
 
@@ -114,12 +114,12 @@ tags:
   - { '$ref': 'admin/deployment_type.yaml#/tag' }
   - { '$ref': 'admin/environment.yaml#/tag' }
   - { '$ref': 'admin/group.yaml#/tag' }
+  - { '$ref': 'admin/namespace.yaml#/tag' }
   - { '$ref': 'admin/orchestration_system.yaml#/tag' }
   - { '$ref': 'admin/project_fact_type.yaml#/tag' }
   - { '$ref': 'admin/project_fact_type_option.yaml#/tag' }
   - { '$ref': 'admin/project_link_type.yaml#/tag' }
   - { '$ref': 'admin/project_type.yaml#/tag' }
-  - { '$ref': 'admin/team.yaml#/tag' }
   - name: Projects
     description: Endpoints used for the management of projects
   - name: Settings
